// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`joins will select joined values 1`] = `
	select
	  \`foo\`.\`name\` as \`fooValue\`,
	  \`bar\`.\`name\` as \`barValue\`,
	  \`baz\`.\`rating\` as \`bazRating\`
	from
	  \`foo\`
	  inner join \`bar\` on \`bar\`.\`color\` = \`foo\`.\`color\`
	  left join \`baz\` on \`baz\`.\`rating\` = \`bar\`.\`rating\`
	where
	  \`foo\`.\`name\` <> 'Danny'
	  and \`bar\`.\`rating\` > 50
`;

exports[`select will select a entire entity 1`] = `
	select
	  \`foo\`.\`id\` as \`id\`,
	  \`foo\`.\`bar\` as \`bar\`,
	  \`foo\`.\`baz\` as \`baz\`
	from
	  \`foo\`
`;

exports[`select will select a field directly 1`] = `
	select
	  \`foo\`.\`bar\` as \`bar\`
	from
	  \`foo\`
`;

exports[`select will select via object 1`] = `
	select
	  \`foo\`.\`bar\` as \`bar\`,
	  \`foo\`.\`baz\` as \`baz\`
	from
	  \`foo\`
`;

exports[`sort will add multiple clauses 1`] = `
	select
	  \`test\`.\`name\` as \`name\`
	from
	  \`test\`
	order by
	  \`test\`.\`rating\` asc,
	  \`test\`.\`name\` asc
`;

exports[`sort will add order clause 1`] = `
	select
	  \`test\`.\`name\` as \`name\`
	from
	  \`test\`
	order by
	  \`test\`.\`id\` asc
`;

exports[`sort will sort by joined table 1`] = `
	select
	  \`test\`.\`name\` as \`name\`
	from
	  \`test\`
	  inner join \`other\` on \`other\`.\`name\` = \`test\`.\`name\`
	order by
	  \`other\`.\`rank\` asc
`;
